--- a/prototips/templates/index.html
+++ b/prototips/templates/index.html
@@ -68,13 +68,11 @@
         }
     </style>
 </head>
+<header>
+    {% include 'navbar.html' %}
+</header>
 
 <body>
-
-    <header>
-        {% include 'navbar.html' %}
-    </header>
-
     <main class="container">
         <section class="col-main">
             <h1>LESSA</h1>
@@ -96,7 +94,8 @@
                     tutorías en vivo, algunos con certificación.</li>
                 <li><strong>Aplicaciones Móviles:</strong> Permiten aprender y practicar en cualquier
                     momento y lugar con lecciones y glosarios de señas.</li>
-                <li><strong>Libros y Materiales Impresos:</strong> Guías visuales y descripciones detalladas de cada seña,
+                <li><strong>Libros y Materiales Impresos:</strong> Guías visuales y descripciones detalladas de cada
+                    seña,
                     útiles tanto para autodidactas como para cursos formales.</li>
                 <li><strong>Eventos y Talleres Presenciales:</strong> Organizados por asociaciones de la
                     comunidad sorda en El Salvador para practicar en un entorno real.</li>
@@ -118,6 +117,8 @@
     <footer>
         <p>Lenguaje de Señas Salvadoreño (LESSA)</p>
         <p>Ingeniería de Software</p>
+        <p>&copy; 2025 LESSA. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 </html>
