--- a/prototips/templates/navbar.html
+++ b/prototips/templates/navbar.html
@@ -95,7 +95,7 @@
         <div class="logo">LESSA</div>
         <ul class="nav-links">
             <li><a href="{{ url_for('index') }}">Inicio</a></li>
-            <li><a href="#">Aprender</a></li>
+            <li><a href="{{ url_for('aprender') }}">Aprender</a></li>
             <li><a href="#">Jugar</a></li>
             <li><a href="#">Opciones</a></li>
         </ul>
