--- a/prototips/templates/navbar.html
+++ b/prototips/templates/navbar.html
@@ -96,7 +96,7 @@
         <ul class="nav-links">
             <li><a href="{{ url_for('index') }}">Inicio</a></li>
             <li><a href="{{ url_for('aprender') }}">Aprender</a></li>
-            <li><a href="#">Jugar</a></li>
+            <li><a href="{{ url_for('jugar') }}">Jugar</a></li>
             <li><a href="#">Opciones</a></li>
         </ul>
         <div class="hamburger" onclick="toggleMenu()">
